fix gap contact

--- a/fileadmin/templates/css/blockmenu.css
+++ b/fileadmin/templates/css/blockmenu.css
@@ -190,7 +190,7 @@ color: #007C86;
     flex-direction: column;
 }
 
-.contact-wrap__item:first-of-type {
+.contact-item:first-of-type {
     margin-right: 40px;
     margin-bottom: 27px;
 }
